# pico-sdcard-boot

./: CMakeLists.txt  README.md  fs_init.c  main.c
examples/hello/: CMakeLists.txt  main.c
